<resources>
    <string name="app_name">Clipboard Sync</string>

    <!--Main Activity-->
    <string name="empty_history_message">The history is empty. Try to copy something to the clipboard</string>
    <string name="pc_is_not_selected">PC is not selected. Please select it in Settings tab</string>

    <!--Settings Activity-->
    <string name="action_settings">Settings</string>
    <string name="actions_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="server_ip_default"></string>
    <string name="server_port_default"></string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="notifications_summary">If you copy text, a notification will show up</string>
    <string name="clear_database">Clear history</string>
    <string name="settings_category_connection">Connection</string>
    <string name="settings_category_history">History</string>
    <string name="search_PC">Search for PC automatically</string>
    <string name="not_connected_to_wifi">You are not connected to Wi-Fi</string>
    <string name="no_pc_found">No PC found</string>
    <string name="pc_found">PC found</string>
    <string name="scanning">Scanning. Please wait…</string>


    <!--Details Activity-->
    <string name="details_1">Clipboard Sync</string>
    <string name="details_2">An open source app that enables sharing clipboard between devices via Wi-Fi</string>
    <string name="authors">Authors:\n\tPrzemysław Szurek\n\tMonika Nowak\n\tBartosz Stojewski\n\tMateusz Najbor\n\tPaweł Muszyński</string>
    <string name="github_link">https://github.com/pk-mobilki/clipboard-sync</string>
    <string name="github_details">Source code can be found at: </string>

    <!--Util-->
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
