<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/detailsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:text="@string/details_2"
            android:textSize="14sp" android:lineSpacingExtra="8sp" android:layout_margin="5dp"/>
    <TextView
            android:text="@string/github_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/githubTextView" android:lineSpacingExtra="8sp"
            android:layout_margin="5dp"/>
    <TextView
            android:text="@string/github_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/githubLinkTextView" android:lineSpacingExtra="8sp"
            android:layout_margin="5dp"/>
    <TextView
            android:text="@string/authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/authorsTextView" android:lineSpacingExtra="8sp"
            android:layout_margin="5dp"/>

</LinearLayout>